--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a href="#projects" class="main-button">View live success workers</a>
             <div class="social-icon">
             <a href="#"><i class="fa fa-linkedin"></i></a>
-            <a href="#"><i class="fa fa-facebook"></i></a>
+            <a href="https://www.facebook.com/profile.php?id=100080715101171"><i class="fa fa-facebook"></i></a>
             <a href="#"><i class="fa fa-twitter"></i></a>
             <a href="#"><i class="fa fa-youtube"></i></a>
             </div>
